--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
         "module-composer": "^0.56.0"
     },
     "devDependencies": {
-        "cloc": "^2.10.0",
-        "doctoc": "^2.2.0",
-        "eslint": "^8.21.0",
-        "husky": "^8.0.1",
+        "cloc": "^2.11.0",
+        "doctoc": "^2.2.1",
+        "ejs": "^3.1.9",
+        "eslint": "^8.41.0",
+        "eslint-plugin-import": "^2.27.5",
+        "husky": "^8.0.3",
         "module-indexgen": "^0.15.2",
+        "npm-check-updates": "^16.10.12",
         "parcel": "^2.6.2",
-        "task-library": "^0.43.0"
+        "task-library": "^0.218.0"
     },
     "targets": {
         "default": {
